<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:isScrollContainer="true"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:text="@string/about_app1"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/e1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/about_app2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/e2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/about_app3"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/e3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/about_app4"
            />
    </LinearLayout>






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:text="@string/about_app5"
        />
    <Button style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="OK"
        android:id="@+id/bClose"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_dark"
        android:foreground="?android:attr/selectableItemBackground"
        android:textStyle="bold"
        android:clickable="true"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
